charts/camunda-platform-8.3/test/unit/optimize/golden/deployment.golden.yaml
---
# Source: camunda-platform/templates/optimize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-test-optimize
  labels:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.3.22"
    app.kubernetes.io/component: optimize
  annotations:
    {}
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: camunda-platform
      app.kubernetes.io/instance: camunda-platform-test
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: optimize
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: camunda-platform
        app.kubernetes.io/instance: camunda-platform-test
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: "8.3.22"
        app.kubernetes.io/component: optimize
    spec:
      imagePullSecrets:
        []
      initContainers:
        - name: migration
          image: camunda/optimize:8.3.15
          command: ['./upgrade/upgrade.sh', '--skip-warning']
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          env:
            - name: CAMUNDA_OPTIMIZE_ZEEBE_ENABLED
              value: "true"
            - name: CAMUNDA_OPTIMIZE_ZEEBE_PARTITION_COUNT
              value: "3"
            - name: CAMUNDA_OPTIMIZE_ZEEBE_NAME
              value: zeebe-record
            - name: OPTIMIZE_ELASTICSEARCH_HOST
              value: "camunda-platform-test-elasticsearch"
            - name: OPTIMIZE_ELASTICSEARCH_HTTP_PORT
              value: "9200"
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /camunda
              name: camunda
      containers:
        - name: optimize
          image: camunda/optimize:8.3.15
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 100
          env:
            - name: CAMUNDA_OPTIMIZE_ZEEBE_ENABLED
              value: "true"
            - name: CAMUNDA_OPTIMIZE_ZEEBE_PARTITION_COUNT
              value: "3"
            - name: CAMUNDA_OPTIMIZE_ZEEBE_NAME
              value: zeebe-record
            - name: OPTIMIZE_ELASTICSEARCH_HOST
              value: "camunda-platform-test-elasticsearch"
            - name: OPTIMIZE_ELASTICSEARCH_HTTP_PORT
              value: "9200"
            - name: SPRING_PROFILES_ACTIVE
              value: "ccsm"
            - name: CAMUNDA_OPTIMIZE_IDENTITY_ISSUER_URL
              value: "http://localhost:18080/auth/realms/camunda-platform"
            - name: CAMUNDA_OPTIMIZE_IDENTITY_ISSUER_BACKEND_URL
              value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform"
            - name: CAMUNDA_OPTIMIZE_IDENTITY_REDIRECT_ROOT_URL
              value: "http://localhost:8083"
            - name: CAMUNDA_OPTIMIZE_IDENTITY_CLIENTID
              value: "optimize"
            - name: CAMUNDA_OPTIMIZE_IDENTITY_CLIENTSECRET
              valueFrom:
                secretKeyRef:
                  name: camunda-platform-test-optimize-identity-secret
                  key: optimize-secret
            - name: CAMUNDA_OPTIMIZE_IDENTITY_AUDIENCE
              value: "optimize-api"
            - name: CAMUNDA_OPTIMIZE_IDENTITY_BASE_URL
              value: "http://camunda-platform-test-identity:80"
            - name: CAMUNDA_OPTIMIZE_API_AUDIENCE
              value: "optimize-api"
            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI
              value: "http://camunda-platform-test-keycloak:80/auth/realms/camunda-platform/protocol/openid-connect/certs"
            - name: CAMUNDA_OPTIMIZE_SECURITY_AUTH_COOKIE_SAME_SITE_ENABLED
              value: "false"
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 600m
              memory: 1Gi
          ports:
            - containerPort: 8090
              name: http
              protocol: TCP
            - containerPort: 8092
              name: management
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/readyz
              scheme: HTTP
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /camunda
              name: camunda
      volumes:
        - name: tmp
          emptyDir: {}
        - name: camunda
          emptyDir: {}
      securityContext:
        fsGroup: 100
        runAsNonRoot: true
